[metadata]
name = configer
version = 0.2.0

[options]
package_dir= 
    =src
packages = find: 
zip_safe = False
python_requires = >=3.7.0
install_requires =
    clint
    toml
    click
    pyyaml
    prestring
test_suite = tests

[options.packages.find]
where = src
exclude = 
    docs
    tests

[options.package_data]
configer = template/*.j2

[options.extras_require]
dev =
    pytest
    tox
    mypy
    flake8

[options.entry_points]
console_scripts = 
    configer=configer.command:main

